--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,11 @@ android:
     - android-sdk-license-.+
     - google-gdk-license-.+
 
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+
 script:
-  - "./gradlew clean build fullCoverage coveralls"
+  - "./gradlew clean build fullCoverage coveralls --stacktrace"
