--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ android:
     - google-gdk-license-.+
 
 before_script:
-  - echo no | android create avd --force -n test -t android-28 --abi google_apis/armeabi-v7a
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a --tag google_apis
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
