--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ cache:
 env:
   global:
     - ANDROID_API=28
-    - EMULATOR_API=28
     - ANDROID_BUILD_TOOLS=28.0.3
     - ADB_INSTALL_TIMEOUT=5 # minutes
 
@@ -24,12 +23,10 @@ android:
     - platform-tools
     - build-tools-$ANDROID_BUILD_TOOLS
     - android-$ANDROID_API
-    - android-$EMULATOR_API_LEVEL
     - extra-google-m2repository
     - extra-android-m2repository # for design library
     - addon-google_apis-google-19 # google play services
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
 
   licenses:
     - android-sdk-preview-license-.+
