--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,22 @@ cache:
 
 env:
   global:
-    - ANDROID_API=28
-    - ANDROID_BUILD_TOOLS=28.0.3
-    - ADB_INSTALL_TIMEOUT=5 # minutes
+    - ANDROID_API_LEVEL=28
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_EMU_API_LEVEL=22
+    - ANDROID_ABI=armeabi-v7a
+    - ADB_INSTALL_TIMEOUT=5 # minutes (2 minutes by default)
 
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS
-    - android-$ANDROID_API
-    - extra-google-m2repository
-    - extra-android-m2repository # for design library
-    - addon-google_apis-google-19 # google play services
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - android-$ANDROID_EMU_API_LEVEL
+    - extra-android-support
+    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
     - android-sdk-preview-license-.+
@@ -34,8 +36,9 @@ android:
     - google-gdk-license-.+
 
 before_script:
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a --tag google_apis
-  - emulator -avd test -no-skin -no-audio -no-window &
+#  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/id_travisci\n" >> ~/.ssh/config
+  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
