--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ env:
   global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_EMU_API_LEVEL=26
-    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_EMU_API_LEVEL=28
+    - ANDROID_ABI=x86_64
     - ADB_INSTALL_TIMEOUT=5 # minutes (2 minutes by default)
 
 android:
@@ -37,7 +37,7 @@ android:
 
 before_script:
 #  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/id_travisci\n" >> ~/.ssh/config
-  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
+  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis_playstore/$ANDROID_ABI
   - emulator -avd test -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
