--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ env:
   global:
     - ANDROID_API_LEVEL=28
     - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_EMU_API_LEVEL=28
-    - ANDROID_ABI=x86_64
+    - ANDROID_EMU_API_LEVEL=25
+    - ANDROID_ABI=armeabi-v7a
     - ADB_INSTALL_TIMEOUT=5 # minutes (2 minutes by default)
 
 android:
