--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ env:
 android:
   components:
     - tools
-    - platform-tools
-    - tools
+#    - platform-tools
+#    - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - android-$ANDROID_EMU_API_LEVEL
