--- a/.travis.yml
+++ b/.travis.yml
@@ -26,21 +26,21 @@ android:
 #    - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    - android-$ANDROID_EMU_API_LEVEL
+#    - android-$ANDROID_EMU_API_LEVEL
     - extra-android-support
-    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
+#    - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 
   licenses:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
     - google-gdk-license-.+
 
-before_script:
-#  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/id_travisci\n" >> ~/.ssh/config
-  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
-  - emulator -avd test -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#before_script:
+##  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/id_travisci\n" >> ~/.ssh/config
+#  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
+#  - emulator -avd test -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
 script:
-  - "./gradlew clean build fullCoverage coveralls --stacktrace"
+  - "./gradlew clean build testDebugUnitTest coveralls --stacktrace"
