--- a/app/jacoco-unified.gradle
+++ b/app/jacoco-unified.gradle
@@ -5,45 +5,36 @@ jacoco {
     reportsDir = file("$buildDir/reports")
 }
 
+coveralls {
+    jacocoReportPath = "$buildDir/reports/jacocoTestReport/jacocoTestReport.xml"
+}
+
 tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
 }
 
-android.buildTypes.debug.testCoverageEnabled = true
-
-//Variáveis necessárias
-
-ext.instrumentedTestTaskName = ":app:createDebugAndroidTestCoverageReport"
-ext.unitTestTaskName = ":app:testDebugUnitTest"
-ext.demoName = "app"
-ext.libName = "app"
-ext.flavorLib = ""
-ext.flavorDemo = ""
-
-task "fullCoverage"(type: JacocoReport, dependsOn: [unitTestTaskName, instrumentedTestTaskName]) {
+task jacocoTestReport(type: JacocoReport, dependsOn: "testDebugUnitTest") {
     group = "Reporting"
-    description = "Generate Jacoco combined coverage reports for Instrumented and Unit Tests"
-    onlyIf = { true }
+    description = "Generate Jacoco coverage reports for Debug build"
+
     reports {
         xml.enabled = true
         html.enabled = true
     }
 
-    def libFlavorDir = flavorLib == "" ? "debug" : "${flavorLib}Debug"
-    def fileFilter = [
+    // what to exclude from coverage report
+    // UI, "noise", generated classes, platform classes, etc.
+    def excludes = [
             '**/R.class',
             '**/R$*.class',
             '**/*$ViewInjector*.*',
-            '**/*$ViewBinder*.*',
             '**/BuildConfig.*',
             '**/Manifest*.*',
-            '**/*App.*',
-            '**/*Component.*',
-            '**/*Module.*',
             '**/*Test*.*',
             'android/**/*.*',
             '**/databinding/**/*.*',
             '**/android/databinding/*Binding.*',
+            '**/*Output.kt',
             '**/BR.*',
             '**/*Module.*', // Modules for Dagger.
             '**/*Dagger*.*', // Dagger auto-generated code.
@@ -51,20 +42,19 @@ task "fullCoverage"(type: JacocoReport, dependsOn: [unitTestTaskName, instrument
             '**/*_Provide*Factory*.*',
             '**/*_Factory.*' //Dagger auto-generated code
     ]
+    // generated classes
+    classDirectories = fileTree(
+            dir: "$buildDir/intermediates/classes/debug",
+            excludes: excludes
+    ) + fileTree(
+            dir: "$buildDir/tmp/kotlin-classes/debug",
+            excludes: excludes
+    )
 
-
-    def libDebugTree = fileTree(dir: "${rootDir}/$libName/build/tmp/kotlin-classes/$libFlavorDir", excludes: fileFilter)
-    def libMainSrc = "$rootDir/$libName/src/main/java"
-
-    sourceDirectories = files([libMainSrc])
-    classDirectories = files([libDebugTree])
-
-    def flavorPath = flavorDemo != "" ? "flavors/${flavorDemo.toUpperCase()}/" : ""
-
-    executionData = fileTree(dir: "$rootDir", includes: [
-            "$libName/build/jacoco/test${flavorLib.capitalize()}DebugUnitTest.exec",
-            "$demoName/build/outputs/code-coverage/connected/${flavorPath}*coverage.ec",
-            "$demoName/build/outputs/code_coverage/debugAndroidTest/connected/*coverage.ec",
-            "$demoName/build/spoon-output/debug/coverage/**/*.ec",
+    // sources
+    sourceDirectories = files([
+            android.sourceSets.main.java.srcDirs,
+            "src/main/kotlin"
     ])
+    executionData = files("$buildDir/jacoco/testDebugUnitTest.exec")
 }
