--- a/app/jacoco-unified.gradle
+++ b/app/jacoco-unified.gradle
@@ -3,6 +3,7 @@ apply plugin: 'jacoco'
 jacoco {
     toolVersion = "0.8.3"
     reportsDir = file("$buildDir/reports")
+    sourceDirs = files(sourceSets.main.kotlin.srcDirs).files.absolutePath
 }
 
 coveralls {
