--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     testOptions {
         unitTests.includeAndroidResources = true
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -55,6 +59,7 @@ dependencies {
 
     //Dependency Injection
     implementation "com.google.dagger:dagger:2.22.1"
+    implementation 'com.google.android.material:material:1.0.0'
     kapt "com.google.dagger:dagger-compiler:2.22.1"
     compileOnly 'javax.annotation:jsr250-api:1.0'
 
@@ -69,4 +74,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 
-apply from:'jacoco-unified.gradle'
+apply from: 'jacoco-unified.gradle'
