--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     //Dependency Injection
-    implementation "com.google.dagger:dagger:2.22.1"
+    implementation "com.google.dagger:dagger:2.16"
     implementation 'com.google.android.material:material:1.0.0'
-    kapt "com.google.dagger:dagger-compiler:2.22.1"
+    kapt "com.google.dagger:dagger-compiler:2.16"
     compileOnly 'javax.annotation:jsr250-api:1.0'
 
     testImplementation 'junit:junit:4.12'
@@ -72,6 +72,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
 
 apply from: 'jacoco-unified.gradle'
