--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,20 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.2'
 
 
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.1.0'
+
+    // AndroidJUnitRunner and JUnit Rules
     androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
+
+    // Assertions
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.ext:truth:1.1.0'
+    androidTestImplementation 'com.google.truth:truth:0.44'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
 
 apply from: 'jacoco-unified.gradle'
+apply from: 'jacoco-unit-test.gradle'
