--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.robolectric:robolectric:4.2'
 
+    // Espresso
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
 
     // Core library
     androidTestImplementation 'androidx.test:core:1.1.0'
