--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     testImplementation "com.google.truth:truth:0.44"
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'org.robolectric:robolectric:4.2'
+    testImplementation 'androidx.arch.core:core-testing:2.0.1'
+
 
 
     // Core library
