--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,15 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
-
 apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 32
     defaultConfig {
         applicationId "br.com.demo.omdbdemo"
         minSdkVersion 25
-        targetSdkVersion 28
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -41,58 +39,56 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.0.2'
     //OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.squareup.okio:okio:1.17.2'
     // Logging interceptor
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     //Gson
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //Dependency Injection
-    implementation "com.google.dagger:dagger:2.22.1"
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation "com.google.dagger:dagger:2.28.3"
+    implementation 'com.google.android.material:material:1.5.0'
     kapt "com.google.dagger:dagger-compiler:2.22.1"
     compileOnly 'javax.annotation:jsr250-api:1.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'androidx.test:core:1.1.0'
-    testImplementation "com.google.truth:truth:0.44"
-    testImplementation "io.mockk:mockk:1.9.3"
-    testImplementation 'org.robolectric:robolectric:4.2'
-    testImplementation 'androidx.arch.core:core-testing:2.0.1'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation "com.google.truth:truth:1.0"
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation 'org.robolectric:robolectric:4.8-alpha-1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
 
     // Espresso
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
     // Core library
-    androidTestImplementation 'androidx.test:core:1.1.0'
+    androidTestImplementation 'androidx.test:core:1.4.0'
 
     // AndroidJUnitRunner and JUnit Rules
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 
     // Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.ext:truth:1.1.0'
-    androidTestImplementation 'com.google.truth:truth:0.44'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.0'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
 
-apply from: 'jacoco-unified.gradle'
-apply from: 'jacoco-unit-test.gradle'
